--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "cors": "^2.8.5",
+    "ctdigitalforum": "file:",
     "express": "^5.1.0",
     "lucide-react": "^0.503.0",
     "puppeteer": "^24.7.2",
